Updated the version of Apache COmmon Collections to 4.5.0.